--- a/css/styles.css
+++ b/css/styles.css
@@ -11,4 +11,36 @@
     color: blue;
    }
    
+/* HOME PAGE  SECTION */
+
+#testimonials {
+    padding:110px 22rem;
+    text-align: center;
+    height: 400px;
+   }
    
+   .btn{
+       margin: 20px 20px;
+   }
+   
+   .sign-btn{
+       width: 250px;
+       height: 60px;
+   }
+   
+   .main{
+     background-position: center center;
+     background-size: cover;
+   }
+   .main-content h1 {
+      color: #fff;
+      font-size: 45px;
+      /*font-family: serif;*/
+      font-weight:300;
+   }
+   
+   .main-content p {
+   text-align: center;
+   color: #fff;
+   }
+      
