--- a/css/styles.css
+++ b/css/styles.css
@@ -74,3 +74,54 @@
  	font-size: 16px;
  	font-weight: 500;
  }
+
+/*WHY CHOOSE LEARNEST card*/
+
+.wcl-card{
+	margin-top:-90px; 
+	margin-bottom: 100px;
+}
+        
+.wcl-card .card-img-top{
+	width: 80px;
+} 
+
+.card{
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+
+
+/*there is more for you*/
+
+
+.timfy{
+	background-image:linear-gradient(#000000fc,#00000057), url("../image/section-bg.jpg");
+	padding: 120px;
+	background-position: center center;
+	background-size: cover;
+}
+
+.timfy .cl-1 p{
+	color: #ffff;
+	font-size: 14px;
+	font-weight: 700;
+	text-align: left;
+}
+
+.timfy .cl-1 h1{
+	color: #ffff;
+	text-align: left;
+	font-size: 45px;
+	font-weight: 300;
+
+}
+ 
+.timfy .cl-2 p{
+ 	padding:30px 50px 0px;
+ 	text-align: center;
+ 	color: #ffff;
+ 	font-size: 16px;
+ 	font-weight: 500;
+ }
+
